# Hotel_Inventory_Management_System

./: README.md
hotel-inventory-system/: README.md  inventory_recommendations.csv  par_levels.csv  pyproject.toml  requirements.txt  simulation_results.csv
hotel-inventory-system/notebooks/: hotel_inventory_analysis.ipynb
hotel-inventory-system/src/: forecasting.py  hotel_inventory_system.py  par_levels.py  simulation.py  utils.py
hotel-inventory-system/tests/: test_calculate_par_levels.py  test_forecast_demand.py  test_simulate_inventory_system.py
