[tool.poetry]
name = "hotel-inventory-system"
version = "0.1.0"
description = "A hotel inventory management system for tracking bar inventory, forecasting demand, and optimizing stock levels."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
scikit-learn = "^0.24.0"
statsmodels = "^0.12.0"
prophet = "^1.0.0"  # If using Prophet for forecasting
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"